# btest

./: README.md  pyproject.toml
data/: Indices.xlsx
docs/: tearsheet.html
equities/: indicies.parquet
outputs/lagging_indecies/: tearsheet.html
outputs/mom_long_short_sp500/: equity.parquet  metadata.parquet  positions.parquet  tearsheet.html  trades.parquet  weights.parquet
scripts/: convert_indices_xlsx_to_parquet.py  download_sp500_to_parquet.py
src/quantdsl_backtest.egg-info/: SOURCES.txt
src/quantdsl_backtest/data/: adapters.py  schema.py
src/quantdsl_backtest/dsl/: backtest_config.py  costs.py  data_config.py  execution.py  factors.py  portfolio.py  signals.py  strategy.py  transforms.py  universe.py
src/quantdsl_backtest/engine/: __init__.py  accounting.py  backtest_runner.py  data_loader.py  execution_engine.py  factor_engine.py  metrics_quantstats.py  portfolio_engine.py  results.py  signal_engine.py  vectorized_engine.py
src/quantdsl_backtest/examples/: lagging_indecies.py  momentum_long_short_sp500.py  tiny_momentum_ls.py
src/quantdsl_backtest/models/: costs.py  latency.py  slippage.py  volume_limits.py
src/quantdsl_backtest/utils/: logging.py  time.py  types.py
tests/: test_accounting.py  test_backtest_runner_smoke.py  test_cleaning_transform.py  test_cost_matrix_equivalence.py  test_dsl_configs.py  test_dsl_costs_strategy.py  test_execution.py  test_factors.py  test_indices_strategy_smoke.py  test_integration_simple_momentum_vectorbt.py  test_metrics_quantstats.py  test_models_costs.py  test_models_latency.py  test_models_slippage.py  test_models_volume_limits.py  test_portfolio.py  test_signal_engine_expr.py  test_signals.py
tests_slow/: __init__.py  test_integration_engines_consistency.py  test_integration_engines_costs_consistency.py  test_integration_momentum_adv_vectorbt.py  test_integration_simple_momentum_vectorbt.py  test_integration_sp500_example_engines_consistency.py  test_vectorized_turnover_nonzero.py
