[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantdsl-backtest"
version = "0.1.0"
description = "Experimental internal DSL for trading strategy backtesting."
readme = "README.md"
requires-python = "==3.11.*"

# Core runtime dependencies
dependencies = [
  "pandas>=2.0",
  # NumPy 1.24+ provides official Python 3.11 wheels; avoid pinning below 1.24
  "numpy>=1.24,<3.0",
  "vectorbt>=0.28",      # core backtesting & YFData
  "yfinance>=0.2.40",    # Yahoo backend used by vectorbt.YFData
  "plotly>=5.0",         # for plots from pf.plot(), etc.
  "pyarrow",             # for efficient data storage
  "lxml",                # for XML parsing
  "polars>=1.4,<2.0",    # high-performance dataframe engine (optional path)
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "pytest>=8.0",
  "mypy>=1.10",
  "black>=24.0",
  "isort>=5.13",
  # Type stubs should be dev-only to avoid unnecessary runtime installs
  "pandas-stubs==2.3.3.251201",
]

[project.urls]
Homepage = "https://github.com/olegroshka/btest"
Repository = "https://github.com/olegroshka/btest"

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = [
  "tests",
]
